--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font: 15px Arial, sans-serif;
 }
 .whole{
     width: 100%;
@@ -114,16 +115,19 @@ form button{
     background: #ff004f;
     color: #fff;
     font-size: 16px;
-    padding: 12px 50px;
-    margin: 20px 0;
+    padding: 5px 17px;
     border: 0;
     outline: none;
+    margin-left: 6px;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.5s;
+    display:inline-block;
+    box-shadow: 0 3px rgb(226, 140, 145);
 }
 form button:hover{
-    transform: translateY(-5px);
+    /* transform: translateY(-5px); */
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.24), 0 13px 25px 0 rgba(0,0,0,0.19);
 
 
 }
